A few changes have been made

--- a/index.html
+++ b/index.html
@@ -188,8 +188,12 @@
                   <h5 class="card-title">$40</h5>
                   <h3 class="card-text">
                     Whole Grain Bread
-                    <i class="fa-solid fa-exclamation"></i>
-                  </h3>
+                    <i
+                    class="fa-solid fa-exclamation"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    data-bs-title="100% natural ingredient suitable for all tastes!"
+                  ></i>                  </h3>
                   <a class="btn btn-light mt-3 align-self-end">Add</a>
                 </div>
               </div>
@@ -208,8 +212,12 @@
                   <h5 class="card-title">$40</h5>
                   <h3 class="card-text">
                     Whole Grain Bread
-                    <i class="fa-solid fa-exclamation"></i>
-                  </h3>
+                    <i
+                    class="fa-solid fa-exclamation"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    data-bs-title="100% natural ingredient suitable for all tastes!"
+                  ></i>                  </h3>
                   <a class="btn btn-light mt-3 align-self-end">Add</a>
                 </div>
               </div>
@@ -228,8 +236,12 @@
                   <h5 class="card-title">$40</h5>
                   <h3 class="card-text">
                     Whole Grain Bread
-                    <i class="fa-solid fa-exclamation"></i>
-                  </h3>
+                    <i
+                    class="fa-solid fa-exclamation"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    data-bs-title="100% natural ingredient suitable for all tastes!"
+                  ></i>                  </h3>
 
                   <a class="btn btn-light mt-3 align-self-end">Add</a>
                 </div>
@@ -250,7 +262,7 @@
           <div class="timer">
             <div class="time-unit">
               <div class="time-value days">0</div>
-              <!-- يمكن وضع قيمة افتراضية هنا -->
+            
               <span class="unit">Days</span>
             </div>
             <div class="time-unit">
@@ -260,12 +272,11 @@
             </div>
             <div class="time-unit">
               <div class="time-value minutes">0</div>
-              <!-- يمكن وضع قيمة افتراضية هنا -->
+           
               <span class="unit">Min</span>
             </div>
             <div class="time-unit">
               <div class="time-value seconds">0</div>
-              <!-- يمكن وضع قيمة افتراضية هنا -->
               <span class="unit">Sec</span>
             </div>
           </div>
