--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
             <div class="col-md-4 col-lg-3 mb-4">
               <h6 class="text-uppercase fw-bold">Explore</h6>
               <hr class="mb-4 mt-0 mx-auto" />
-              <p>
+              <p class="explore">
                 <a href="#!" class="text-white text-decoration-none">Home</a>
               </p>
               <p>
